--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/RNekoCloud/pdf-gen-example/issues"
   },
-  "homepage": "https://github.com/RNekoCloud/pdf-gen-example#readme"
+  "homepage": "https://github.com/RNekoCloud/pdf-gen-example#readme",
+  "dependencies": {
+    "html-to-pdfmake": "^2.5.1",
+    "jsdom": "^23.0.1",
+    "pdfmake": "^0.2.8"
+  }
 }
