chore: Add module type

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pdf-gen-example",
   "version": "1.0.0",
+  "type": "module",
   "description": "PDF Gen example",
   "main": "index.js",
   "scripts": {
